--- a/public/css/commont.css
+++ b/public/css/commont.css
@@ -1,4 +1,4 @@
-html{color:#000;background:#FFF}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0}table{border-collapse:collapse;border-spacing:0}fieldset,img{border:0}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal}ol,ul{list-style:none}caption,th{text-align:left}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}q:before,q:after{content:''}abbr,acronym{border:0;font-variant:normal}sup{vertical-align:text-top}sub{vertical-align:text-bottom}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;*font-size:100%}legend{color:#000}#yui3-css-stamp.cssreset{display:none}
+html{color:#000;background:#FFF}body,div,dl,dt,dd,ul,ol,li,h1,h3,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0}table{border-collapse:collapse;border-spacing:0}fieldset,img{border:0}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal}ol,ul{list-style:none}caption,th{text-align:left}h1,h3,h3,h4,h5,h6{font-size:100%;font-weight:normal}q:before,q:after{content:''}abbr,acronym{border:0;font-variant:normal}sup{vertical-align:text-top}sub{vertical-align:text-bottom}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;*font-size:100%}legend{color:#000}#yui3-css-stamp.cssreset{display:none}
 html{
 	height:100%;
 }
@@ -6,64 +6,59 @@ body{
 	position: relative;
 	min-height:100%;
 	font-size:14px;
-	font-family: "Microsoft Yahei",Arial,Helvetica;
-	background: #f1f4f9;
+	font-family: Tahoma, Verdana,"Microsoft Yahei";
 	color:#333;
-}
-button,input{
-	font-family: "Microsoft Yahei",Arial,Helvetica;
 }
 a{
+	text-decoration: none;
 	color:#333;
-	text-decoration:none;
 }
-a:hover{
-	text-decoration:underline;
-}
-.wraper{
-	height:100%;
+.wrapper{
+	height: 100%;
+	overflow: hidden;
 }
 header{
-	height:45px;
-	margin-bottom:15px;
-	background: #0099cc;
-}
-header .box,footer .box{
-	width:1200px;
-	margin:0 auto;
-	line-height:45px;
-	color:#fff;
-}
-header h1{
-	font-size:20px;
-	font-weight:bold;
+	float: left;
+	width:300px;
+	padding-top:30px;
 }
 .container{
-	width:1200px;
-	padding-bottom:120px;
-	margin:0 auto;
-}
-.content{
-	padding:20px;
-	background:#fff;
-	overflow:hidden;
-}
+	margin-left: 320px;
+	padding: 45px 20px 120px;
+}			
 footer{
-	position:absolute;
-	bottom:0;
-	width:100%;
-	height:70px;
-	padding-top:20px;
-	background: #0099cc;
-	color:#fff;
+	position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    z-index: 99;
+}			
+.mod-head{
+	margin-bottom: 45px;
+	padding:0 20px;
+	line-height: 1.2;
 }
-footer a{
-	color:#fff;
+.mod-head h1{
+	font-size:48px;
 }
-footer .copy{
-	float: left;
-	width:200px;
+.mod-head p{
+	text-indent: 2em;
 }
-footer .info{
-	margin-left: 240px;
+.mod-list li{
+	height: 28px;
+	padding-left: 22px;
+	line-height: 28px;
+	font-size: 16px;
+}
+.mod-list a{
+	padding:1px 8px 1px 2px;
+}
+.mod-list a:hover,.mod-list .active a{
+	border-bottom: 1px dotted #666;
+}
+.mod-foot{
+	text-align: right;
+	padding:0 30px;
+	color:#999;
 }
