--- a/public/css/commont.css
+++ b/public/css/commont.css
@@ -3,8 +3,7 @@ html{
 	height:100%;
 }
 body{
-	position: relative;
-	min-height:100%;
+	height:100%;
 	font-size:14px;
 	font-family: Tahoma, Verdana,"Microsoft Yahei";
 	color:#333;
@@ -14,8 +13,19 @@ a{
 	color:#333;
 }
 .wrapper{
-	height: 100%;
+	position: relative;
+	min-height: 100%;
 	overflow: hidden;
+}
+.wrapper:after {
+    display: block;
+    width: 100%;
+    content: '';
+    border-top: 1px dashed #999;
+    transform: rotate(-36deg);
+    position: relative;
+    left: 25%;
+    z-index: 9999;
 }
 header{
 	float: left;
@@ -84,6 +94,9 @@ footer{
 	}
 	.container{
 		margin-left: 0;
+	}
+	.wrapper:after{
+		display: none;
 	}
     .main{
     	width:100%;
