--- a/public/css/commont.css
+++ b/public/css/commont.css
@@ -23,8 +23,9 @@ a{
     content: '';
     border-top: 1px dashed #999;
     transform: rotate(-36deg);
-    position: relative;
-    left: 25%;
+    position: absolute;
+    left: 20%;
+    bottom: 0;
     z-index: 9999;
 }
 header{
