--- a/public/css/commont.css
+++ b/public/css/commont.css
@@ -5,7 +5,7 @@ html{
 body{
 	height:100%;
 	font-size:14px;
-	font-family: Tahoma, Verdana,"Microsoft Yahei";
+	font-family: "Microsoft Yahei",Arial,Helvetica;
 	color:#333;
 }
 a{
@@ -44,6 +44,7 @@ footer{
 }
 .mod-head h1{
 	font-size:48px;
+	font-family:Tahoma, Verdana,"Microsoft Yahei";
 }
 .mod-head p{
 	text-indent: 2em;
