--- a/public/css/commont.css
+++ b/public/css/commont.css
@@ -47,7 +47,8 @@ footer{
 	font-family:Tahoma, Verdana,"Microsoft Yahei";
 }
 .mod-head p{
-	text-indent: 2em;
+	text-indent: 3.75em;
+	color:#484848;
 }
 .mod-list ul{
 	overflow: hidden;
