--- a/public/css/common.css
+++ b/public/css/common.css
@@ -5,7 +5,7 @@ html{
 body{
 	height:100%;
 	font-size:14px;
-	font-family: "Microsoft Yahei",Tahoma,Verdana,Arial,sans-serif;
+	font-family: "Microsoft Yahei",Arial,Helvetica;
 	color:#333;
 }
 a{
