--- a/public/style/common.css
+++ b/public/style/common.css
@@ -14,7 +14,7 @@ a{
 }
 .wrapper{
 	position: relative;
-	min-height: 100%;
+	height: 100%;
 	overflow: hidden;
 }
 header{
@@ -23,11 +23,14 @@ header{
 	padding-top:32px;
 }
 .container{
-	margin-left: 320px;
-	padding: 40px 20px 120px;
+	position: relative;
+	height: 100%;
+	margin-left: 300px;
+	padding: 0 20px 0 40px;
 }
 .main{
 	width:80%;
+	padding: 40px 0 120px;
 }		
 footer{
 	position: absolute;
