--- a/public/style/common.css
+++ b/public/style/common.css
@@ -26,7 +26,7 @@ header{
 	position: relative;
 	height: 100%;
 	margin-left: 300px;
-	padding: 0 20px 0 40px;
+	padding: 0 30px;
 }
 .main{
 	width:80%;
