--- a/static/style/index.css
+++ b/static/style/index.css
@@ -17,7 +17,7 @@
 }
 .mod-person .avatar{
     position: relative;
-    margin: 0 80px;
+    margin: 15px 80px;
     text-align: center;
 }
 .mod-person .avatar img{
@@ -38,13 +38,17 @@
     color: #fff;
 }
 .mod-person .summary{
-    padding: 10px 0;
     text-align: right;
 }
 .mod-person .summary h3{
-    margin-bottom: 6px;
     line-height: 48px;
     font-size: 32px;
+    font-weight: bold;
+    color: #1f2937;
+}
+.mod-person .summary h4{
+    line-height: 44px;
+    font-size: 28px;
     font-weight: bold;
     color: #1f2937;
 }
@@ -94,11 +98,11 @@
 
 .mod-about .bd{
     display: flex;
-    padding: 50px 0;
+    padding: 40px 0;
 }
 .mod-about .picture-container{
     position: relative;
-    top: -50px;
+    top: -40px;
 }
 .mod-about .picture-container .picture{
     position: relative;
@@ -125,7 +129,7 @@
     flex: 1;
     min-width: 0;
     position: relative;
-    top: 50px;
+    top: 40px;
     background: #f6f8fa;
     padding: 25px;
     border-radius: 12px;
