--- a/static/style/index.css
+++ b/static/style/index.css
@@ -17,7 +17,7 @@
 }
 .mod-person .avatar{
     position: relative;
-    margin: 15px 80px;
+    margin: 20px 80px;
     text-align: center;
 }
 .mod-person .avatar img{
@@ -41,12 +41,14 @@
     text-align: right;
 }
 .mod-person .summary h3{
+    margin-bottom: 6px;
     line-height: 48px;
     font-size: 32px;
     font-weight: bold;
     color: #1f2937;
 }
 .mod-person .summary h4{
+    margin-bottom: 4px;
     line-height: 44px;
     font-size: 28px;
     font-weight: bold;
