--- a/static/style/common.css
+++ b/static/style/common.css
@@ -3,9 +3,11 @@ html{
     height:100%;
     --active-color: #2095f2;
     --text-color: #6e7781;
+    --text-dark-color: #4b535d;
     --title-color: #141b24;
     --primary-color: #006494;
     --primary-hover-color: #015c89;
+    --secondary-color: #2095f2;
 }
 body{
     height:100%;
