--- a/static/style/index.css
+++ b/static/style/index.css
@@ -232,6 +232,9 @@
     background: var(--primary-color);
     color: #fff;
 }
+.mod-github .summary-container .btn-blue:hover{
+    background: var(--primary-hover-color);
+}
 .mod-github .picture-container{
     position: relative;
 }
