--- a/static/style/common.css
+++ b/static/style/common.css
@@ -4,7 +4,7 @@ html{
     --active-color: #2095f2;
     --text-color: #6e7781;
     --text-dark-color: #4b535d;
-    --title-color: #141b24;
+    --title-color: #3f4349;
     --primary-color: #006494;
     --primary-hover-color: #015c89;
     --secondary-color: #2095f2;
