--- a/static/style/project.css
+++ b/static/style/project.css
@@ -19,18 +19,19 @@
     font-weight: bold;
     color: #e8e8e8;
 }
-.mod-project section{
+.mod-project .group{
     margin-bottom: 30px;
 }
-.mod-project section h3{
+.mod-project .group h3{
     position: relative;
     margin: 10px 0;
     padding-left: 20px;
     line-height: 24px;
     font-size: 22px;
     font-weight: bold;
+    color: var(--title-color);
 }
-.mod-project section h3::before{
+.mod-project .group h3::before{
     position: absolute;
     left: 1px;
     top: 0;
@@ -68,11 +69,12 @@
     line-height: 34px;
     font-size: 22px;
     font-weight: bold;
+    color: var(--title-color);
 }
 .mod-project .item .subtitle{
     line-height: 26px;
     font-size: 16px;
-    color: #888;
+    color: var(--text-color);
 }
 .mod-project .item .cover{
     position: absolute;
