--- a/static/style/common.css
+++ b/static/style/common.css
@@ -254,6 +254,16 @@ footer{
     background: url('../image/public/bg.svg') center top repeat-x;
     background-size: cover;
 }
+.mod-bg-world{
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 600px;
+    width: 100%;
+    z-index: -1;
+    background: url(../image/word_map.png) center 10px no-repeat, url('../image/public/bg.svg') center top repeat-x;
+    background-size: cover;
+}
 .mod-bg .waves {
     position: absolute;
     width: 100%;
