--- a/static/style/common.css
+++ b/static/style/common.css
@@ -251,11 +251,10 @@ footer{
     height: 600px;
     width: 100%;
     z-index: -1;
-    background: url('../image/public/bg.svg') center top repeat-x;
-    background-size: cover;
+    background: url('../image/public/bg.svg') center top / cover repeat-x;
 }
 .mod-bg-world{
-    background: url(../image/public/) center 10px no-repeat, url('../image/public/bg.svg') center top / cover repeat-x;
+    background: url(../image/public/word_map.png) center 10px no-repeat, url('../image/public/bg.svg') center top / cover repeat-x;
 }
 .mod-bg .waves,.waves{
     position: absolute;
