--- a/static/style/about.css
+++ b/static/style/about.css
@@ -13,7 +13,7 @@
     margin-bottom: 10px;
     line-height: 26px;
     text-indent: 2em;
-    color: #333;
+    color: var(--text-color);
 }
 .mod-word blockquote p.from{
     text-align: right;
@@ -34,7 +34,8 @@
 }
 .mod-panel .hd .title{
     font-size: 18px;
-    font-weight: bold;  
+    font-weight: bold;
+    color: var(--title-color);
 }
 .mod-panel .hd::after{
     position: absolute;
@@ -43,7 +44,7 @@
     content: '';
     width: 4px;
     height: 24px;
-    background: #2095f2;
+    background: var(--active-color);
     margin-top: -12px;
     border-radius: 3px;
 }
@@ -70,6 +71,7 @@
     width: 100px;
     text-align: right;
     font-weight: bold;
+    color: var(--title-color);
 }
 .mod-panel .field-content{
     flex: 1;
